recallable/tests/ui/model_fail_recallable_skip_with_unknown_parameter.stderr
error: unrecognized `recallable` parameter
 --> tests/ui/model_fail_recallable_skip_with_unknown_parameter.rs:5:24
  |
5 |     #[recallable(skip, garbage)]
  |                        ^^^^^^^
