recallable/tests/ui/model_fail_recallable_skip_with_unknown_parameter.rs
use recallable::recallable_model;

#[recallable_model]
struct BadSkip {
    #[recallable(skip, garbage)]
    value: i32,
    other: u32,
}

fn main() {}
